src/snapshots/blog__snapshot@inside-rust__2021__05__04__core-team-update.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2021/05/04/core-team-update.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Core Team Update: May 2021 | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="Core Team Update: May 2021 | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="Core Team Update: May 2021 | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="Core Team Update: May 2021" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>Core Team Update: May 2021</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">May 4, 2021 &middot; Steve Klabnik
     on behalf of <a href="https://www.rust-lang.org/governance/teams/core">The Core Team</a> 
    </div>

    <div class="post">
      <p>Hey everyone!  Back in August of last year, the core team wrote a blog post
titled &quot;<a href="https://blog.rust-lang.org/2020/08/18/laying-the-foundation-for-rusts-future.html">Laying the foundation for Rust's Future</a>.&quot; Ever since then,
the Core Team has been doing a tremendous amount of work to help get the
foundation going, and prepare the project for the changes that have now
occurred because of these events.</p>
<p>But that also means we've been very quiet!  This sort of work has largely
been focused inward, and not really something that's visible from the
outside, even if you are on a Rust team.  However, thanks to these efforts,
the Foundation now exists, and is starting to work on its mission.  That also
means it's time for the core team to shift the focus of its work.</p>
<p>Beyond the Foundation efforts, we've also had several initiatives underway
that you may or may not know about:</p>
<h2><a href="#the-2021-roadmap" aria-hidden="true" class="anchor" id="the-2021-roadmap"></a>The 2021 Roadmap</h2>
<p>The <a href="https://github.com/rust-lang/rfcs/pull/3037">2021 Roadmap</a> RFC was merged back in January.  This set the goals for
the core team for this year.  This is a bit different from previous years,
where we laid out goals for the entire project.  We decided this year to
focus on Core, and give the teams the leeway to set their own goals, while we
focused on overall organizational health.</p>
<p>Later in the year, we'll be starting the process for next year as well. We're
not actively thinking about this yet, but ideally, a yearly roadmap would be
merged in December, rather than in January, so we want to make sure and begin
early enough to get this shipped on time for 2022.</p>
<h2><a href="#team-charters" aria-hidden="true" class="anchor" id="team-charters"></a>Team Charters</h2>
<p>As part of that work, we've begun the first steps of a process to give each
team a formal charter.  Way back in <a href="https://github.com/rust-lang/rfcs/blob/master/text/1068-rust-governance.md">RFC 1068</a>, the scope of the initial
teams was laid out.  While that has served us well over the years, as teams
were spun up, shut down, and changed, we haven't always done a good job of
making it clear where the boundaries of responsibility lie in each team.
Part of the magic in Rust's governance structure is that individual teams are
given significant authority to do as they see fit, but that also means that
we have to be concious about scope. We'll have more to report on this process
as it continues to unfold, but the end goal is stated in the roadmap:</p>
<blockquote>
<p>The Rust teams, in concert with the core team, will work to establish a
charter for each of the Rust teams over the course of the year, with an aim
for defining, particularly, the purpose and membership requirements.  Our
goal is that going into 2022, all active groups within the Rust project will
have well-defined charters and membership.</p>
</blockquote>
<p>Now is the time to redouble efforts here, and we are excited to work with all
of the teams on nailing these charters down. As a start, we've been working with
the Libs, Release, and Cargo teams for an initial pass at their charters. We've
structured this to be largely team-driven; we're setting expectations and framing
what charters should look like, but the teams work on what goes in them. As this
progresses, we hope to learn more about the challenges involved so that we can
improve our process and bring in more teams.</p>
<p>It's worth pointing out explicitly that this work also includes the Core Team; we'll
be creating a charter for ourselves as well.</p>
<h2><a href="#audit-of-packages-owned-by-the-project" aria-hidden="true" class="anchor" id="audit-of-packages-owned-by-the-project"></a>Audit of packages owned by the project</h2>
<p>As another example of something the core team has been working on, we've been
doing work to clarify the status of a number of packages owned by the Rust team
on crates.io. We are conducting a full audit of these packages, making sure that
they're things that should be owned by the project, making sure that they have
appropriate permissions, making sure that they have people taking care of them,
all of that kind of thing. Historically, we've been fairly ad-hoc about this sort
of thing, but as we grow, it is very imporant to be deliberate. An
<a href="https://github.com/rust-lang/rfcs/pull/3119">RFC</a> was just opened to create a policy here.</p>
<h2><a href="#thanks" aria-hidden="true" class="anchor" id="thanks"></a>Thanks!</h2>
<p>So that's a quick summary of what we've been up to, and some of what we'll be
doing in the immediate future. We plan on trying to communicate what Core is working
on more often in the future; 2020 was an extremely complex year for a variety of
reasons, but we're feeling really positive about the future of Core and the
Rust project generally. Thank you to the teams for all you've done for Rust.</p>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
